<resources>
    <string name="app_name">FormFilling</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Add User Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="enter_state_name">Enter State Name</string>
    <string name="enter_country_name">Enter Country Name</string>
    <string name="enter_pincode_name">Enter Pincode Name</string>
    <string name="save_details">Save Details</string>
</resources>